@@ -1,7 +1,8 @@
 2003-04-01  Richard Frith-Macdonald <rfm@gnu.org>
 
-	* Source/NSCalendarDate.m: trivial simplification of timezone
-	handling.
+	* Source/NSCalendarDate.m: ([initWithString:calendarFormat:locale:])
+	add support for %F millisecond initialisation.
+	make trivial simplification of timezone handling.
 
 2003-03-31  Stephane Corthesy <stephane@sente.ch>
 
